# Laboratorio

./: Barra.cpp  Barra.h  CMakeLists.txt  CaricatoreFile.cpp  CaricatoreFile.h  File.cpp  File.h  Observer.cpp  Observer.h  README.md  Subject.h  main.cpp
test/: Testclassi.cpp
test/lib/googletest/include/gtest/: gtest-matchers.h  gtest-message.h  gtest-param-test.h  gtest-printers.h  gtest-typed-test.h  gtest.h
test/lib/googletest/include/gtest/internal/: gtest-death-test-internal.h  gtest-filepath.h  gtest-internal.h  gtest-port.h  gtest-string.h
test/lib/googletest/src/: gtest.cc
